--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@ts-rest/core": "^3.51.0",
+    "@ts-rest/serverless": "^3.51.0",
     "bcrypt": "^5.1.1",
     "i18next": "^24.0.2",
     "next": "15.0.3",
