--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@tanstack/react-query": "5",
     "@ts-rest/core": "^3.51.0",
+    "@ts-rest/react-query": "^3.51.0",
     "@ts-rest/serverless": "^3.51.0",
     "bcrypt": "^5.1.1",
     "i18next": "^24.0.2",
