--- a/.development.env
+++ b/.development.env
@@ -1,2 +1,3 @@
 DATABASE_URL="postgresql://postgres:postgres@host.docker.internal:1212/postgres"
 DIRECT_URL="postgresql://postgres:postgres@host.docker.internal:1212/postgres"
+NEXT_PUBLIC_API_URL="http://localhost:3000/"
