feat: send mail function

--- a/package.json
+++ b/package.json
@@ -17,16 +17,19 @@
     "bcrypt": "^5.1.1",
     "i18next": "^24.0.2",
     "next": "15.0.3",
+    "nodemailer": "^6.9.16",
     "prisma": "^5.22.0",
     "prisma-json-types-generator": "^3.1.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "uuid": "^11.0.3",
     "zod": "^3.23.8",
     "zod-i18n-map": "^2.27.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
